# legendary-spoon

./: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  agence  agence.c  agence.h  database.h  display  display.c  mqueue.h  shm_server.c  tirage  tirage.c  user.c  user_agence.h  users  users.c
data/: destinations.txt
lib/: listeChaine.h  shmem.h
src/: CMakeLists.txt  agence.c  display.c  listeChaine.c  listeChaine.h  messages.h  mqueue.h  receiver.c  shm_server.c  tirage.c  user_agence.h  users.c
src/launcher/: CMakeLists.txt  launcher.c
